--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
  * @LastEditors: Mengke
  * @email: z9mk65@gmail.com
  * @Date: 2022-02-06 11:31:08
- * @LastEditTime: 2022-02-06 11:31:21
+ * @LastEditTime: 2022-02-08 23:03:39
  * @Description: Modify here please
  */
 
@@ -29,7 +29,8 @@
         "paths": {
             "@/*": ["src/*"],
             "@mock/*": ["mock/*"]
-        }
+        },
+        "types": ["vite/client"]
     },
     "include": ["./src"]
 }
