--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@douyinfe/semi-ui": "^2.3.1",
     "axios": "^0.25.0",
+    "driver.js": "0.9.5",
     "i18next": "^21.6.10",
     "index.json": "^1.0.0",
     "less": "^4.1.2",
