--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@douyinfe/semi-ui": "^2.3.1",
+    "@icon-park/react": "^1.3.5",
     "axios": "^0.25.0",
     "driver.js": "0.9.5",
     "i18next": "^21.6.10",
