--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "vite-plugin-svgr": "^1.0.1"
   },
   "dependencies": {
-    "@douyinfe/semi-ui": "^2.3.1",
+    "@douyinfe/semi-ui": "^2.9.1",
     "@icon-park/react": "^1.3.5",
+    "ahooks": "^3.3.10",
     "axios": "^0.25.0",
     "driver.js": "0.9.5",
     "i18next": "^21.6.10",
